feat(actiony): mediator injection and general improvements
